Create basic components structure

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#D0BCFF">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/favicon-180.png">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.webmanifest">
-  <meta name="description" content="Project Description">
-  <title>Project Title</title>
+  <meta name="description" content="University project">
+  <title>SOA Web UI</title>
 </head>
 
 <body>
